--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,5 +1,10 @@
 
 /* NAVIGATION */
+/* SHOPPING CART + LOGIN BANNER */
+#banner ul li{
+    display: inline;
+}
+
 /* COMPANY NAME LOGO */
 #logo {
     display: block;
@@ -17,6 +22,10 @@
     padding: 0 20px;
 }
 
+.dropdown-menu {
+    width: 100%;
+    border-style: none;
+}
 
 /* MODAL */
 /* DUMMY MODAL BUTTON */
