--- a/public/assets/css/cart.css
+++ b/public/assets/css/cart.css
@@ -2,3 +2,24 @@
     width: 100%;
     height: auto;
 }
+
+.shopping-btn {
+    padding: 5px 10px;
+}
+
+.promo {
+    text-align: center;
+}
+
+#order-promocode {
+    display: inline;
+}
+
+#order-coupon{
+    display: inline;
+}
+
+.paypal-btn {
+    margin-top: 15px;
+    padding: 10px 5px;
+}
