--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,4 +1,6 @@
 {{> nav }} 
+
+<br>
  
     <!-- CAROUSEL -->
     <!-- 1ST SLIDE - PROMOTION WITH BUTTON -->
@@ -7,7 +9,7 @@
 
     <!-- SHOP THE TREND -->
     <div class="container" id="trend-ctn">
-        <img id="trend-pic" src="public/assets/img/sample-img.png">
+        <img id="trend-pic" src="/assets/img/sample-img.png">
         <div class="shop-trend">
             <p>SHOP THE TREND</p>
             <button type="button" class="btn btn-secondary" id="trend-btn">Shop</button>
@@ -24,16 +26,16 @@
     <div class="container" id="fav">
         <div class="row">
             <div class="col-md-3">
-                <img class="fav-pic1" src="public/assets/img/sample-img.png">
+                <img class="fav-pic1" src="/assets/img/sample-img.png">
             </div>
-            <div class="col-md-3">
-                <img class="fav-pic2" src="public/assets/img/sample-img.png">
+            <div class="col-md-3 fav-pic">
+                <img class="fav-pic2" src="/assets/img/sample-img.png">
             </div>
-            <div class="col-md-3">
-                <img class="fav-pic3" src="public/assets/img/sample-img.png">
+            <div class="col-md-3 fav-pic">
+                <img class="fav-pic3" src="/assets/img/sample-img.png">
             </div>
-            <div class="col-md-3">
-                <img class="fav-pic4" src="public/assets/img/sample-img.png">
+            <div class="col-md-3 fav-pic">
+                <img class="fav-pic4" src="/assets/img/sample-img.png">
             </div>
         </div>
     </div>
@@ -46,7 +48,7 @@
     <!-- HERO ITEM  -->
     <!-- SINGLE ITEM -->
     <div class="container" id="hero-ctn">
-        <img id="hero-pic" src="public/assets/img/sample-img.png">
+        <img id="hero-pic" src="/assets/img/sample-img.png">
         <div class="shop-hero">
             <p>HERO ITEM</p>
             <button type="button" class="btn btn-secondary" id="trend-btn">Shop</button>
@@ -60,7 +62,7 @@
     <div class="container" id="shop-ctn">
         <div class="row" id="shop-main-ctn">
             <div class="col-md-6 shop-main">
-                <img id="shop-pic1" src="public/assets/img/sample-img.png">
+                <img id="shop-pic1" src="/assets/img/sample-img.png">
                 <div class="shop-main-shop">
                     <p>SHOP DRESSES</p>
                     <button type="button" class="btn btn-secondary" id="trend-btn">Shop</button>
@@ -69,7 +71,7 @@
 
             <div class="col-md-6 shop-half">
                 <div class="row shop-half-top">
-                    <img id="shop-pic2" src="public/assets/img/sample-img.png">
+                    <img id="shop-pic2" src="/assets/img/sample-img.png">
                     <div class="shop-half-shop">
                         <p>SHOP TEES</p>
                         <button type="button" class="btn btn-secondary" id="trend-btn">Shop</button>
@@ -77,7 +79,7 @@
                 </div>  
 
                 <div class="row shop-half-bottom">                   
-                    <img id="shop-pic3" src="public/assets/img/sample-img.png">
+                    <img id="shop-pic3" src="/assets/img/sample-img.png">
                     <div class="shop-half-shop">
                         <p>SHOP TEES</p>
                         <button type="button" class="btn btn-secondary" id="trend-btn">Shop</button>
@@ -95,8 +97,8 @@
     
     <!-- FOOTER -->
     <!-- DESIGNED BY -->
-    <hr>
-    <footer class="container">
+    <footer class="container-fluid">
+        <div class="container">
         <div class="row">
             <div class="col-md-4">
                 <h7>ABOUT US</h7>
@@ -116,6 +118,7 @@
                 <p>Size Guide</p>
             </div>
         </div>
-        <p class="design">Copyright @2018 Designed by: </p>
+        </div>
+        <p class="copyright">Copyright @2018 Designed by: </p>
     </footer>
 
