--- a/views/products/products.handlebars
+++ b/views/products/products.handlebars
@@ -5,19 +5,18 @@
 
 
     <!-- PRODUCT IMG -->
-    
     <div class="container">
         <div class="row">
             <div class="col-md-5">
-                <img class="main-img" id="hero-img" src="public/assets/img/dummy1.jpeg">
+                <img class="main-img" id="hero-img" src="/assets/img/dummy1.jpeg">
             </div>
 
             <!-- ADDITIONAL PRODUCT IMG -->
             <div class="col-md-2">
-                <img class="additional-img" id="add-img1" src="public/assets/img/sample-img.png">
-                <img class="additional-img" id="add-img2" src="public/assets/img/sample-img.png">
-                <img class="additional-img" id="add-img3" src="public/assets/img/sample-img.png">
-                <img class="additional-img" id="add-img4" src="public/assets/img/sample-img.png">
+                <img class="additional-img" id="add-img1" src="/assets/img/dummy1.jpeg">
+                <img class="additional-img" id="add-img2" src="/assets/img/sample-img.png">
+                <img class="additional-img" id="add-img3" src="/assets/img/sample-img.png">
+                <img class="additional-img" id="add-img4" src="/assets/img/sample-img.png">
             </div>
 
             <!-- ABOUT THE PRODUCT -->
@@ -101,7 +100,7 @@
         <h1 class="recommended title">RECOMMENDED FOR YOU</h1>
         <div class="row">
                 <div class="col-md-3">
-                    <img class="rec-img" id="rec-img1-1" src="public/assets/img/sample-img.png">
+                    <img class="rec-img" id="rec-img1-1" src="/assets/img/sample-img.png">
                     <div class="container" id="description">
                         <p>ITEM NAME</p>
                         <P>$0.00</P>
@@ -109,7 +108,7 @@
                 </div>
 
                 <div class="col-md-3">
-                    <img class="rec-img" id="rec-img1-2" src="public/assets/img/sample-img.png">
+                    <img class="rec-img" id="rec-img1-2" src="/assets/img/sample-img.png">
                     <div class="container" id="description">
                         <p>ITEM NAME</p>
                         <P>$0.00</P>
@@ -117,7 +116,7 @@
                 </div>
 
                 <div class="col-md-3">
-                    <img class="rec-img" id="rec-img1-3" src="public/assets/img/sample-img.png">
+                    <img class="rec-img" id="rec-img1-3" src="/assets/img/sample-img.png">
                     <div class="container" id="description">
                         <p>ITEM NAME</p>
                         <P>$0.00</P>
@@ -125,7 +124,7 @@
                 </div>
 
                 <div class="col-md-3">
-                    <img class="rec-img" id="rec-img1-4" src="public/assets/img/sample-img.png">
+                    <img class="rec-img" id="rec-img1-4" src="/assets/img/sample-img.png">
                     <div class="container" id="description">
                         <p>ITEM NAME</p>
                         <P>$0.00</P>
@@ -136,29 +135,31 @@
     </div>
     <!-- RECENTLY VIEWED -->
 
-    <hr>
 
     <!-- FOOTER -->
     <!-- DESIGNED BY -->
-    <footer class="container">
-            <div class="row">
-                <div class="col-md-4">
-                    <h7>ABOUT US</h7>
-                    <p>About</p>
-                    <p>Become and Affliliate</p>
-                </div>
-    
-                <div class="col-md-4">
-                    <h7>INFORMATION</h7>
-                    <p>Delivery</p>
-                    <p>Terms and Conditions</p>
-                </div>
-    
-                <div class="col-md-4">
-                    <h7>HELP</h7>
-                    <p>Track My Order</p>
-                    <p>Size Guide</p>
-                </div>
+    <footer class="container-fluid">
+        <div class="container">
+        <div class="row">
+            <div class="col-md-4">
+                <h7>ABOUT US</h7>
+                <p>About</p>
+                <p>Become and Affliliate</p>
             </div>
-            <p class="design">Copyright @2018 Designed by: </p>
-        </footer>
+
+            <div class="col-md-4">
+                <h7>INFORMATION</h7>
+                <p>Delivery</p>
+                <p>Terms and Conditions</p>
+            </div>
+
+            <div class="col-md-4">
+                <h7>HELP</h7>
+                <p>Track My Order</p>
+                <p>Size Guide</p>
+            </div>
+        </div>
+        </div>
+        <p class="copyright">Copyright @2018 Designed by: </p>
+    </footer>
+
