--- a/views/products/products.handlebars
+++ b/views/products/products.handlebars
@@ -14,9 +14,9 @@
             <!-- ADDITIONAL PRODUCT IMG -->
             <div class="col-md-2">
                 <img class="additional-img" id="add-img1" src="/assets/img/dummy1.jpeg">
-                <img class="additional-img" id="add-img2" src="/assets/img/sample-img.png">
-                <img class="additional-img" id="add-img3" src="/assets/img/sample-img.png">
-                <img class="additional-img" id="add-img4" src="/assets/img/sample-img.png">
+                <img class="additional-img" id="add-img2" src="/assets/img/dummy2.jpeg">
+                <img class="additional-img" id="add-img3" src="/assets/img/dummy3.jpeg">
+                <img class="additional-img" id="add-img4" src="/assets/img/dummy4.jpeg">
             </div>
 
             <!-- ABOUT THE PRODUCT -->
@@ -100,35 +100,35 @@
         <h1 class="recommended title">RECOMMENDED FOR YOU</h1>
         <div class="row">
                 <div class="col-md-3">
+                    <a href="/products/">
                     <img class="rec-img" id="rec-img1-1" src="/assets/img/sample-img.png">
-                    <div class="container" id="description">
-                        <p>ITEM NAME</p>
-                        <P>$0.00</P>
-                    </div>
+                        <p class="product-name">ITEM NAME</p>
+                    </a>
+                        <p class="product-price">$0.00</p>
                 </div>
 
                 <div class="col-md-3">
+                    <a href="/products/">
                     <img class="rec-img" id="rec-img1-2" src="/assets/img/sample-img.png">
-                    <div class="container" id="description">
-                        <p>ITEM NAME</p>
-                        <P>$0.00</P>
-                    </div>
+                        <p class="product-name">ITEM NAME</p>
+                    </a>
+                        <p class="product-price">$0.00</p>
                 </div>
 
                 <div class="col-md-3">
+                    <a href="/products/">
                     <img class="rec-img" id="rec-img1-3" src="/assets/img/sample-img.png">
-                    <div class="container" id="description">
-                        <p>ITEM NAME</p>
-                        <P>$0.00</P>
-                    </div>
+                        <p class="product-name">ITEM NAME</p>
+                    </a>
+                        <p class="product-price">$0.00</p>
                 </div>
 
                 <div class="col-md-3">
+                    <a href="/products/">
                     <img class="rec-img" id="rec-img1-4" src="/assets/img/sample-img.png">
-                    <div class="container" id="description">
-                        <p>ITEM NAME</p>
-                        <P>$0.00</P>
-                    </div>
+                        <p class="product-name">ITEM NAME</p>
+                    </a>
+                        <p class="product-price">$0.00</p>
                 </div>
             </div>
         </div>
