--- a/views/category/category.handlebars
+++ b/views/category/category.handlebars
@@ -9,20 +9,12 @@
         <div class="row"> 
             <div class="col-md-2" id="ctg-side-bar">
                 <h5> DRESSES</h5>
-                <ul id="ctg-list"> 
-                    <li>
-                        Everyday Dresses
-                    </li>
-                    <li>
-                        Mini Dresses
-                    </li>
-                    <li>
-                        Midi Dresses
-                    </li>
-                    <li>
-                        Maxi Dresses
-                    </li>
-                </ul>
+                <div id="ctg-list"> 
+                    <a href="/category/"><li>Everyday Dresses</li></a>
+                    <a href="/category/"><li>Mini Dresses</li></a>
+                    <a href="/category/"><li>Midi Dresses</li></a>
+                    <a href="/category/"><li>Maxi Dresses</li></a>
+                </div>
             </div>
             <div class="col-md-10">
                 <img id="category-pic" src="/assets/img/sample-img.png">
@@ -34,36 +26,36 @@
                         <!-- QUICK VIEW PICTURE CAROUSEL ON HOVER/CLICK ARROW -->
                         <a href="/products/">
                             <img class="preview-img" id="preview-img1-1" src="/assets/img/sample-img.png">
-                            <p>ITEM NAME</p>
+                            <p class="category-name">ITEM NAME</p>
                         </a>
-                            <p>$0.00</p>
+                            <p class="category-price">$0.00</p>
                     </div>
 
                     <div class="col-md-3">
                         <!-- QUICK VIEW PICTURE CAROUSEL ON HOVER/CLICK ARROW -->
                         <a href="/products/">
                             <img class="preview-img" id="preview-img1-1" src="/assets/img/sample-img.png">
-                            <p>ITEM NAME</p>
+                            <p class="category-name">ITEM NAME</p>
                         </a>
-                            <p>$0.00</p>
+                            <p class="category-price">$0.00</p>
                     </div>
 
                     <div class="col-md-3">
                         <!-- QUICK VIEW PICTURE CAROUSEL ON HOVER/CLICK ARROW -->
                         <a href="/products/">
                             <img class="preview-img" id="preview-img1-1" src="/assets/img/sample-img.png">
-                            <p>ITEM NAME</p>
+                            <p class="category-name">ITEM NAME</p>
                         </a>
-                            <p>$0.00</p>
+                            <p class="category-price">$0.00</p>
                     </div>
 
                     <div class="col-md-3">
                         <!-- QUICK VIEW PICTURE CAROUSEL ON HOVER/CLICK ARROW -->
                         <a href="/products/">
                             <img class="preview-img" id="preview-img1-1" src="/assets/img/sample-img.png">
-                            <p>ITEM NAME</p>
+                            <p class="category-name">ITEM NAME</p>
                         </a>
-                            <p>$0.00</p>
+                            <p class="category-price">$0.00</p>
                     </div>
                 </div>
 
@@ -72,43 +64,42 @@
                         <!-- QUICK VIEW PICTURE CAROUSEL ON HOVER/CLICK ARROW -->
                         <a href="/products/">
                             <img class="preview-img" id="preview-img1-1" src="/assets/img/sample-img.png">
-                            <p>ITEM NAME</p>
+                            <p class="category-name">ITEM NAME</p>
                         </a>
-                            <p>$0.00</p>
+                            <p class="category-price">$0.00</p>
                     </div>
         
                     <div class="col-md-3">
                         <!-- QUICK VIEW PICTURE CAROUSEL ON HOVER/CLICK ARROW -->
                         <a href="/products/">
                             <img class="preview-img" id="preview-img1-1" src="/assets/img/sample-img.png">
-                            <p>ITEM NAME</p>
+                            <p class="category-name">ITEM NAME</p>
                         </a>
-                            <p>$0.00</p>
+                            <p class="category-price">$0.00</p>
                     </div>
         
                     <div class="col-md-3">
                         <!-- QUICK VIEW PICTURE CAROUSEL ON HOVER/CLICK ARROW -->
                         <a href="/products/">
                             <img class="preview-img" id="preview-img1-1" src="/assets/img/sample-img.png">
-                            <p>ITEM NAME</p>
+                            <p class="category-name">ITEM NAME</p>
                         </a>
-                            <p>$0.00</p>
+                            <p class="category-price">$0.00</p>
                     </div>
         
                     <div class="col-md-3">
                         <!-- QUICK VIEW PICTURE CAROUSEL ON HOVER/CLICK ARROW -->
                         <a href="/products/">
                             <img class="preview-img" id="preview-img1-1" src="/assets/img/sample-img.png">
-                            <p>ITEM NAME</p>
+                            <p class="category-name">ITEM NAME</p>
                         </a>
-                            <p>$0.00</p>
+                            <p class="category-price">$0.00</p>
                     </div>
                 </div>
             </div>
         </div> 
     </div>
 
-    <hr>
 
     <!-- FOOTER -->
     <!-- DESIGNED BY -->
