--- a/views/partials/nav.handlebars
+++ b/views/partials/nav.handlebars
@@ -55,16 +55,16 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="#"> New In </a>
+                    <a class="nav-link"  data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="#"> New In </a>
                     <div class="dropdown-menu masthead-dropdown" aria-labelledby="navbarDropdownMenuLink-NewIn">
                         <div class="container">
                             <div class="row">
-                                <div class="col-md-2">
-                                    <a class="dropdown-item" href="/category/">All New</a>
-                                    <a class="dropdown-item" href="/category/">New in Dresses</a>
-                                    <a class="dropdown-item" href="/category/">New In Tees</a>
-                                    <a class="dropdown-item" href="/category/">New In Athleisure</a>
-                                    <a class="dropdown-item" href="/category/">New Deals</a>
+                                <div class="col-md-2" id="categoryNewIn">
+                                    <a class="dropdown-item cat-new-in" href="/category/">All New</a>
+                                    <a class="dropdown-item" id="cat-new-in" href="/category/">New in Dresses</a>
+                                    <a class="dropdown-item cat-new-in" href="/category/">New In Tees</a>
+                                    <a class="dropdown-item cat-new-in" href="/category/">New In Athleisure</a>
+                                    <a class="dropdown-item cat-new-in" href="/category/">New Deals</a>
                                 </div>
 
                                 <div class="col-md-5">
@@ -84,6 +84,7 @@
                         <div class="container">
                             <div class="row">
                                 <div class="col-md-2">
+                                    <a class="dropdown-item" href="/category/">All Dresses</a>
                                     <a class="dropdown-item" href="/category/">Everyday Dresses</a>
                                     <a class="dropdown-item" href="/category/">Mini Dresses</a>
                                     <a class="dropdown-item" href="/category/">Midi Dresses</a>
