--- a/views/category/category.handlebars
+++ b/views/category/category.handlebars
@@ -1,22 +1,19 @@
 <link rel="stylesheet" href="/assets/css/category.css">
 {{> nav }} 
 
-<br>
 
+<br>
 
     <!-- CATEGORY LIST -->
     <div class="container" id="category">
-        <div class="row"> 
-            <div class="col-md-2" id="ctg-side-bar">
-                <h5> DRESSES</h5>
-                <div id="ctg-list"> 
-                    <a href="/category/"><li>Everyday Dresses</li></a>
-                    <a href="/category/"><li>Mini Dresses</li></a>
-                    <a href="/category/"><li>Midi Dresses</li></a>
-                    <a href="/category/"><li>Maxi Dresses</li></a>
-                </div>
-            </div>
-            <div class="col-md-10">
+        {{!-- <div class="row">  --}}
+            {{!-- <div class="col-md-2" id="ctg-side-bar"> --}}
+
+                {{!-- Where the partial will go --}}
+                {{!-- {{> (whichPartial) }} --}}
+
+            {{!-- </div> --}}
+            {{!-- <div class="col-md-10"> --}}
                 <img id="category-pic" src="/assets/img/sample-img.png">
 
                 <br>
@@ -96,34 +93,8 @@
                             <p class="category-price">$0.00</p>
                     </div>
                 </div>
-            </div>
-        </div> 
+            {{!-- </div> --}}
+        {{!-- </div>  --}}
     </div>
 
-
-    <!-- FOOTER -->
-    <!-- DESIGNED BY -->
-    <footer class="container-fluid">
-        <div class="container">
-        <div class="row">
-            <div class="col-md-4">
-                <h7>ABOUT US</h7>
-                <p>About</p>
-                <p>Become and Affliliate</p>
-            </div>
-
-            <div class="col-md-4">
-                <h7>INFORMATION</h7>
-                <p>Delivery</p>
-                <p>Terms and Conditions</p>
-            </div>
-
-            <div class="col-md-4">
-                <h7>HELP</h7>
-                <p>Track My Order</p>
-                <p>Size Guide</p>
-            </div>
-        </div>
-        </div>
-        <p class="copyright">Copyright @2018 Designed by: </p>
-    </footer>
+{{> footer}}
