--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -32,6 +32,7 @@
     <!-- Plugin JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
     <script src="/assets/js/products.js"></script>
+    <script src="/assets/js/app.js"></script>
     
     <!-- PINTEREST SCRIPT -->
     <script async defer data-pin-hover="true" data-pin-tall="true" src="//assets.pinterest.com/js/pinit.js"></script>
