fixed all routes in routes.js

--- a/views/product/category.handlebars
+++ b/views/product/category.handlebars
@@ -21,7 +21,7 @@
                 <div class="row">
                     <div class="col-md-3">
                         <!-- QUICK VIEW PICTURE CAROUSEL ON HOVER/CLICK ARROW -->
-                        <a href="/products/">
+                        <a href="/product/product">
                             <img class="preview-img" id="preview-img1-1" src="/assets/img/sample-img.png">
                             <p class="category-name">ITEM NAME</p>
                         </a>
@@ -30,7 +30,7 @@
 
                     <div class="col-md-3">
                         <!-- QUICK VIEW PICTURE CAROUSEL ON HOVER/CLICK ARROW -->
-                        <a href="/products/">
+                        <a href="/product/product">
                             <img class="preview-img" id="preview-img1-1" src="/assets/img/sample-img.png">
                             <p class="category-name">ITEM NAME</p>
                         </a>
@@ -39,7 +39,7 @@
 
                     <div class="col-md-3">
                         <!-- QUICK VIEW PICTURE CAROUSEL ON HOVER/CLICK ARROW -->
-                        <a href="/products/">
+                        <a href="/product/product">
                             <img class="preview-img" id="preview-img1-1" src="/assets/img/sample-img.png">
                             <p class="category-name">ITEM NAME</p>
                         </a>
@@ -48,7 +48,7 @@
 
                     <div class="col-md-3">
                         <!-- QUICK VIEW PICTURE CAROUSEL ON HOVER/CLICK ARROW -->
-                        <a href="/products/">
+                        <a href="/product/product">
                             <img class="preview-img" id="preview-img1-1" src="/assets/img/sample-img.png">
                             <p class="category-name">ITEM NAME</p>
                         </a>
@@ -59,7 +59,7 @@
                 <div class="row">
                     <div class="col-md-3">
                         <!-- QUICK VIEW PICTURE CAROUSEL ON HOVER/CLICK ARROW -->
-                        <a href="/products/">
+                        <a href="/product/product">
                             <img class="preview-img" id="preview-img1-1" src="/assets/img/sample-img.png">
                             <p class="category-name">ITEM NAME</p>
                         </a>
@@ -68,7 +68,7 @@
         
                     <div class="col-md-3">
                         <!-- QUICK VIEW PICTURE CAROUSEL ON HOVER/CLICK ARROW -->
-                        <a href="/products/">
+                        <a href="/product/product">
                             <img class="preview-img" id="preview-img1-1" src="/assets/img/sample-img.png">
                             <p class="category-name">ITEM NAME</p>
                         </a>
@@ -77,7 +77,7 @@
         
                     <div class="col-md-3">
                         <!-- QUICK VIEW PICTURE CAROUSEL ON HOVER/CLICK ARROW -->
-                        <a href="/products/">
+                        <a href="/product/product">
                             <img class="preview-img" id="preview-img1-1" src="/assets/img/sample-img.png">
                             <p class="category-name">ITEM NAME</p>
                         </a>
@@ -86,7 +86,7 @@
         
                     <div class="col-md-3">
                         <!-- QUICK VIEW PICTURE CAROUSEL ON HOVER/CLICK ARROW -->
-                        <a href="/products/">
+                        <a href="/product/product">
                             <img class="preview-img" id="preview-img1-1" src="/assets/img/sample-img.png">
                             <p class="category-name">ITEM NAME</p>
                         </a>
