--- a/views/partials/nav.handlebars
+++ b/views/partials/nav.handlebars
@@ -7,7 +7,7 @@
         <div class="container">
         <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-                <a class="nav-link" id="my-account" href="/signin/">My Account</a>
+                <a class="nav-link" id="my-account" href="/user/signin/">My Account</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" id="shopping-cart" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="#">
@@ -34,7 +34,7 @@
                         </div>
                         <div class="in-cart-subtotal">
                             <p>Subtotal Total: </p>
-                            <a type="button" class="btn btn-secondary btn-block" href="/cart/">Checkout</a>  
+                            <a type="button" class="btn btn-secondary btn-block" href="/payment/cart/">Checkout</a>  
                         </div>   
                     </div>
                 </div>
@@ -55,121 +55,13 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link"  data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="#"> New In </a>
-                    <div class="dropdown-menu masthead-dropdown" aria-labelledby="navbarDropdownMenuLink-NewIn">
-                        <div class="container">
-                            <div class="row">
-                                <div class="col-md-2" id="categoryNewIn">
-                                    <a class="dropdown-item cat-new-in" href="/category/">All New</a>
-                                    <a class="dropdown-item" id="cat-new-in" href="/category/">New in Dresses</a>
-                                    <a class="dropdown-item cat-new-in" href="/category/">New In Tees</a>
-                                    <a class="dropdown-item cat-new-in" href="/category/">New In Athleisure</a>
-                                    <a class="dropdown-item cat-new-in" href="/category/">New Deals</a>
-                                </div>
-
-                                <div class="col-md-5">
-                                    <img class="masthead-img-new" src="/assets/img/sample-img.png">
-                                </div>
-
-                                <div class="col-md-5">
-                                    <img class="masthead-img-new" src="/assets/img/sample-img.png">
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                    <a class="nav-link" aria-haspopup="true" aria-expanded="false" href="/product/category/"> Rings </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="/category/"> Dresses </a>
-                    <div class="dropdown-menu masthead-dropdown" aria-labelledby="navbarDropdownMenuLink-NewIn">
-                        <div class="container">
-                            <div class="row">
-                                <div class="col-md-2">
-                                    <a class="dropdown-item" href="/category/">All Dresses</a>
-                                    <a class="dropdown-item" href="/category/">Everyday Dresses</a>
-                                    <a class="dropdown-item" href="/category/">Mini Dresses</a>
-                                    <a class="dropdown-item" href="/category/">Midi Dresses</a>
-                                    <a class="dropdown-item" href="/category/">Maxi Dresses</a>
-                                </div>
-
-                                <div class="col-md-5">
-                                    <img class="masthead-img-new" src="/assets/img/sample-img.png">
-                                </div>
-
-                                <div class="col-md-5">
-                                    <img class="masthead-img-new" src="/assets/img/sample-img.png">
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                    <a class="nav-link" aria-haspopup="true" aria-expanded="false" href="/product/category/"> Necklaces </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="/category/"> Denim </a>
-                    <div class="dropdown-menu masthead-dropdown" aria-labelledby="navbarDropdownMenuLink-NewIn">
-                        <div class="container">
-                            <div class="row">
-                                <div class="col-md-2">
-                                    <a class="dropdown-item" href="/category/">Skinny</a>
-                                    <a class="dropdown-item" href="/category/">Distressed</a>
-                                    <a class="dropdown-item" href="/category/">Fashion</a>
-                                </div>
-
-                                <div class="col-md-5">
-                                    <img class="masthead-img-new" src="/assets/img/sample-img.png">
-                                </div>
-
-                                <div class="col-md-5">
-                                    <img class="masthead-img-new" src="/assets/img/sample-img.png">
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="/category/"> Tees </a>
-                    <div class="dropdown-menu masthead-dropdown" aria-labelledby="navbarDropdownMenuLink-NewIn">
-                        <div class="container">
-                            <div class="row">
-                                <div class="col-md-2">
-                                    <a class="dropdown-item" href="/category/">Long Sleeve</a>
-                                    <a class="dropdown-item" href="/category/">Short Sleeve</a>
-                                </div>
-
-                                <div class="col-md-5">
-                                    <img class="masthead-img-new" src="/assets/img/sample-img.png">
-                                </div>
-
-                                <div class="col-md-5">
-                                    <img class="masthead-img-new" src="/assets/img/sample-img.png">
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="/category/"> Athleisure </a>
-                    <div class="dropdown-menu masthead-dropdown" aria-labelledby="navbarDropdownMenuLink-NewIn">
-                        <div class="container">
-                            <div class="row">
-                                <div class="col-md-2">
-                                    <a class="dropdown-item" href="/category/">Tops</a>
-                                    <a class="dropdown-item" href="/category/">Bottoms</a>
-                                    <a class="dropdown-item" href="/category/">Jackets</a>
-                                    <a class="dropdown-item" href="/category/">Sets</a>
-                                </div>
-
-                                <div class="col-md-5">
-                                    <img class="masthead-img-new" src="/assets/img/sample-img.png">
-                                </div>
-
-                                <div class="col-md-5">
-                                    <img class="masthead-img-new" src="assets/img/sample-img.png">
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" aria-haspopup="true" aria-expanded="false" href="/category/"> Deals </a>
+                    <a class="nav-link" aria-haspopup="true" aria-expanded="false" href="/product/category/"> Earrings </a>
                 </li>
             </ul>
         </div>
