--- a/views/partials/nav.handlebars
+++ b/views/partials/nav.handlebars
@@ -7,7 +7,7 @@
         <div class="container">
         <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-                <a class="nav-link" id="my-account" href="/signin/">My Account</a>
+                <a class="nav-link" id="my-account" href="/myaccount/">My Account</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" id="shopping-cart" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="#">
