--- a/views/user/admin.handlebars
+++ b/views/user/admin.handlebars
@@ -3,14 +3,12 @@
 
     <br>
     
+	<h5 class="add-product title">Add a Product</h5>
 
     <div class="container">
         <div class="row">
 				<div class="col-lg-12">
 					<div class="card">
-						<div class="card-header">
-							<h5 class="card-title"><strong>Add a Product</strong></h5>
-						</div>
 
 						<div class="card-body">
 							<form action="" method="POST" role="form">
