--- a/views/partials/nav.handlebars
+++ b/views/partials/nav.handlebars
@@ -11,7 +11,7 @@
             </li>
             <li class="nav-item">
                 <a class="nav-link" id="shopping-cart" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="#">
-                    <i class="fas fa-shopping-cart"></i>
+                    <i class="fas fa-shopping-cart snipcart-checkout"></i>
                 </a>
                 <div class="dropdown-menu dropdown-menu-right cart-dropdown"  id="in-cart" aria-labelledby="navbarDropdownMenuLink-InCart">
                     <div class="container"> 
