Changed Banner. Added Instagram API

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -227,6 +227,12 @@ button {
 .insta{
     text-align: center;
 }
+.instaimg img {margin-bottom:30px;}
+.instaimg img:hover {
+	opacity:0.8;
+	-moz-opacity:0.8;
+	-webkit-opacity:0.8;
+}
 
 /* FOOTER */
 footer {
