--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -93,7 +93,11 @@
 
     <!-- INSTAGRAM API-->
     <h1 class="insta title">SHOP OUR INSTAGRAM</h1>
+    <div class="container">
 
+	<div id="instafeed" class="row gallery"></div>
+
+    </div>
     
     <!-- FOOTER -->
     <!-- DESIGNED BY -->
