--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -17,6 +17,9 @@
     <!-- CSS STYLESHEET -->
     <link rel="stylesheet" type="text/css" href="/assets/css/style.css">
 
+    <!-- MAGNIFIC -->
+    <link rel="stylesheet" href="assets/css/magnific.css">
+
 
 </head>
 <body>
@@ -68,6 +71,11 @@
         });
       });
     </script>
+
+    <!-- INSTAGRAM SCRIPT -->
+    <script src="/assets/js/instafeed.min.js"></script>
+    <script src="/assets/js/magnific.min.js"></script>
+    <script src="/assets/js/custom.js"></script>
     
 </body>
 </html>
