--- a/views/partials/nav.handlebars
+++ b/views/partials/nav.handlebars
@@ -7,11 +7,14 @@
         <div class="container">
         <ul class="navbar-nav ml-auto">
             <li class="nav-item">
+                <a class="nav-link" id="my-account" href="/admin/admin">Admin</a>
+            </li>
+            <li class="nav-item">
                 <a class="nav-link" id="my-account" href="/user/signin/">My Account</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" id="shopping-cart" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="#">
-                    <i class="fas fa-shopping-cart"></i>
+                    <i class="fa fa-shopping-cart"></i>
                 </a>
                 <div class="dropdown-menu dropdown-menu-right cart-dropdown"  id="in-cart" aria-labelledby="navbarDropdownMenuLink-InCart">
                     <div class="container"> 
