controller to add products to category page

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -11,8 +11,8 @@
     <div class="container" id="trend-ctn">
         <img id="trend-pic" src="/assets/img/sample-img.png">
         <div class="shop-trend">
-            <p>SHOP THE TREND</p>
-            <button type="button" class="btn btn-secondary" id="trend-btn">Shop</button>
+            {{!-- <p>SHOP THE TREND</p>
+            <button type="button" class="btn btn-secondary" id="trend-btn">Shop</button> --}}
         </div>
     </div>
 
@@ -47,7 +47,7 @@
 
     <!-- HERO ITEM  -->
     <!-- SINGLE ITEM -->
-    <div class="container" id="hero-ctn">
+    {{!-- <div class="container" id="hero-ctn">
         <img id="hero-pic" src="/assets/img/sample-img.png">
         <div class="shop-hero">
             <p>HERO ITEM</p>
@@ -55,7 +55,7 @@
         </div>
     </div>
 
-    <br>
+    <br> --}}
 
     <!-- SHOP ITEMS -->
     <!-- 3 IMAGES -->
@@ -63,27 +63,27 @@
         <div class="row" id="shop-main-ctn">
             <div class="col-md-6 shop-main">
                 <img id="shop-pic1" src="/assets/img/sample-img.png">
-                <div class="shop-main-shop">
-                    <p>SHOP DRESSES</p>
+                {{!-- <div class="shop-main-shop">
+                    <p>SHOP RINGS</p>
                     <button type="button" class="btn btn-secondary" id="trend-btn">Shop</button>
-                </div>
+                </div> --}}
             </div>
 
             <div class="col-md-6 shop-half">
                 <div class="row shop-half-top">
                     <img id="shop-pic2" src="/assets/img/sample-img.png">
-                    <div class="shop-half-shop">
-                        <p>SHOP TEES</p>
+                    {{!-- <div class="shop-half-shop">
+                        <p>SHOP NECKLACES</p>
                         <button type="button" class="btn btn-secondary" id="trend-btn">Shop</button>
-                    </div>                    
+                    </div>                     --}}
                 </div>  
 
                 <div class="row shop-half-bottom">                   
                     <img id="shop-pic3" src="/assets/img/sample-img.png">
-                    <div class="shop-half-shop">
+                    {{!-- <div class="shop-half-shop">
                         <p>SHOP TEES</p>
                         <button type="button" class="btn btn-secondary" id="trend-btn">Shop</button>
-                    </div>                    
+                    </div>                     --}}
                 </div>  
             </div>
         </div>
