--- a/views/partials/nav.handlebars
+++ b/views/partials/nav.handlebars
@@ -4,7 +4,7 @@
     <!-- ID: MY-ACCOUNT -->
     <!-- ID: SHOPPING CART -->
     <nav class="navbar navbar-expand navbar-light bg-light">
-        <div class="container">
+        <div class="container-fluid">
         <ul class="navbar-nav ml-auto">
             <li class="nav-item">
                 <a class="nav-link" id="my-account" href="/admin/admin">Admin</a>
@@ -58,13 +58,13 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" aria-haspopup="true" aria-expanded="false" href="/product/category/"> Rings </a>
+                    <a class="nav-link" id="ringCategory" aria-haspopup="true" aria-expanded="false" href="/product/category/"> Rings </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" aria-haspopup="true" aria-expanded="false" href="/product/category/"> Necklaces </a>
+                    <a class="nav-link" id="necklaceCategory" aria-haspopup="true" aria-expanded="false" href="/product/category/"> Necklaces </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" aria-haspopup="true" aria-expanded="false" href="/product/category/"> Earrings </a>
+                    <a class="nav-link" id="earringsCategory" aria-haspopup="true" aria-expanded="false" href="/product/category/"> Earrings </a>
                 </li>
             </ul>
         </div>
