--- a/views/product/product.handlebars
+++ b/views/product/product.handlebars
@@ -30,9 +30,9 @@
             <!-- ADD TO FAVORITES -->
             <div class="col-md-5">
                 <div class="product-info">
-                    <h5 class="product-name">Product Name</h5>
-                    <p class="sku">SKU:</p>
-                    <p class="price">$0.00</p>
+                    <h5 class="product-name">Product Name: {{this.dataValues.product_name}} </h5>
+                    <p class="sku">SKU: {{this.dataValues.sku}} </p>
+                    <p class="price">$ {{this.datatValues.regular_price}}</p>
                     <p class="user_quantity">Quantity:</p>
                     <form>
                         <div class="form-group">
@@ -64,30 +64,23 @@
                         <li class="nav-item">
                             <a class="nav-link active" id="features-tab" data-toggle="tab" href="#features" role="tab" aria-controls="home" aria-selected="true">Features</a>
                         </li>
-                        <li class="nav-item">
+                        {{!-- <li class="nav-item">
                             <a class="nav-link" id="size-tab" data-toggle="tab" href="#size" role="tab" aria-controls="profile" aria-selected="false">Size and Fit</a>
-                        </li>
+                        </li> --}}
                     </ul>
 
                     <div class="tab-content" id="detail-content">
                         <div class="tab-pane fade show active" id="features" role="tabpanel" aria-labelledby="home-tab">
-                            <p>Whether off to a sunny brunch or a weekend getaway, this sleeveless, striped wrap sundress is ready when you are. You'lll love its sexy crisscross back and contrasting waist-tie.</p>
-                                <ul>
-                                    <li>Back button closure</li>
-                                    <li>Adjustable waist-tie</li>
-                                    <li>Fabric Self and Contrast: 85% cotton, 15% linen multi stripe</li>
-                                    <li>Machine wash</li>
-                                    <li>Imported</li>
-                                </ul> 
+                            {{type.dataValues.description}}
                         </div>
                         
-                        <div class="tab-pane fade" id="size" role="tabpanel" aria-labelledby="profile-tab">
+                        {{!-- <div class="tab-pane fade" id="size" role="tabpanel" aria-labelledby="profile-tab">
                                 <li>Size small measures approximately 35” from shoulder to hemline</li>
                                 <li>Mid-weight, stretch fabric</li>
                                 <li>Below-the-knee hemline</li>
                                 <li>True to fit</li>
                                 <li>Model is approximately 5'9” (175” cm) and is wearing a Size 2</li>    
-                        </div>
+                        </div> --}}
                     </div> 
                 </div>
             </div>
