cloudinary and just examples

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -9,7 +9,7 @@
 
     <!-- SHOP THE TREND -->
     <div class="container" id="trend-ctn">
-        <img id="trend-pic" src="/assets/img/sample-img.png">
+        <img id="trend-pic" src="http://res.cloudinary.com/blkpocket/image/upload/v1530049905/samples/ecommerce/analog-classic.jpg">
         <div class="shop-trend">
             <p>SHOP THE TREND</p>
             <button type="button" class="btn btn-secondary" id="trend-btn">Shop</button>
@@ -26,16 +26,16 @@
     <div class="container" id="fav">
         <div class="row">
             <div class="col-md-3">
-                <img class="fav-pic1" src="/assets/img/sample-img.png">
+                <img class="fav-pic1" src ="https://res.cloudinary.com/blkpocket/image/upload/v1530226621/studio2.jpg">
             </div>
             <div class="col-md-3 fav-pic">
-                <img class="fav-pic2" src="/assets/img/sample-img.png">
+                <img class="fav-pic2" src="http://res.cloudinary.com/blkpocket/image/upload/v1530226621/IMG_0187.jpg">
             </div>
             <div class="col-md-3 fav-pic">
-                <img class="fav-pic3" src="/assets/img/sample-img.png">
+                <img class="fav-pic3" src="http://res.cloudinary.com/blkpocket/image/upload/v1530226614/IMG_0175.jpg">
             </div>
             <div class="col-md-3 fav-pic">
-                <img class="fav-pic4" src="/assets/img/sample-img.png">
+                <img class="fav-pic4" src="http://res.cloudinary.com/blkpocket/image/upload/v1530226622/IMG_0184.jpg">
             </div>
         </div>
     </div>
@@ -48,7 +48,7 @@
     <!-- HERO ITEM  -->
     <!-- SINGLE ITEM -->
     <div class="container" id="hero-ctn">
-        <img id="hero-pic" src="/assets/img/sample-img.png">
+        <img id="hero-pic" src="http://res.cloudinary.com/blkpocket/image/upload/v1530226621/studio3.jpg">
         <div class="shop-hero">
             <p>HERO ITEM</p>
             <button type="button" class="btn btn-secondary" id="trend-btn">Shop</button>
