--- a/views/partials/nav.handlebars
+++ b/views/partials/nav.handlebars
@@ -3,7 +3,7 @@
     
     <!-- ID: MY-ACCOUNT -->
     <!-- ID: SHOPPING CART -->
-    <nav class="navbar navbar-expand navbar-light bg-light">
+    <nav class="navbar navbar-expand navbar-light">
         <div class="container">
         <ul class="navbar-nav ml-auto">
             <li class="nav-item">
@@ -50,7 +50,7 @@
     <a href="/"><img id="logo" src="/assets/img/blkpocketbanner.jpg" height="100%" width="100%"></a>
 
     <!-- HORIZONTAL NAVIGATION MENU FIXED ON PAGE  ID: MASTHEAD-->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light" id="masthead">
+    <nav class="navbar navbar-expand-lg navbar-light" id="masthead">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
