--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -8,7 +8,7 @@ html {
 }
 
 body {
-    margin-bottom: 250px;
+    margin-bottom: 75px;
 }
 
 button {
@@ -17,6 +17,12 @@ button {
 
 /* NAVIGATION */
 /* SHOPPING CART + LOGIN BANNER */
+.checkoutIcon {
+    border: none;
+    outline-style: none;
+    padding-top: 7px;
+}
+
 .my-cart-masthead{
     text-align: center;
     border-bottom-style: solid;
@@ -48,6 +54,8 @@ button {
 
 /* COMPANY NAME LOGO */
 #logo {
+    width: 50%;
+    height: auto;
     display: block;
     margin-left: auto;
     margin-right: auto;
@@ -155,7 +163,7 @@ button {
 /* SHOP LEFT SIDE - MAIN */
 #shop-main-ctn {
     width: 100%;
-    height: 400px;
+    height: auto;
     margin-left: 0px;
     margin-right: 0px;
     position: relative;
@@ -177,7 +185,7 @@ button {
 /* SHOP RIGHT SIDE - HALF */
 .shop-half {
     width: 100%;
-    height: 400px;
+    height: auto;
     margin-left: 0px;
     margin-right: 0px;
     position: absolute;
@@ -186,7 +194,7 @@ button {
 
 .shop-half-top{
     width: 100%;
-    height: 46%;
+    height: auto;
     padding-left: 15px;
     padding-right: 15px;
     position: absolute;
@@ -238,7 +246,7 @@ button {
 footer {
     position: absolute;
     bottom: 0;
-    height: 175px;
+    height: 50px;
     border-top-style: solid;
     border-top-color: lightgray;
     border-top-width: 2px;
@@ -248,4 +256,5 @@ footer {
 
 .copyright {
     text-align: center;
+    font-size: 10px;
 }
