--- a/views/admin/admin.handlebars
+++ b/views/admin/admin.handlebars
@@ -15,7 +15,12 @@
 							<form id="productForm">
 								<div class="form-group">
 									<label for="">Category</label>
-									<input type="text" class="form-control" id="category_name" placeholder="">
+									<select class="form-control" id="categoryId">
+										<option id="rings" name="rings" value="rings">Rings</option>
+										<option id="necklace" name="necklace" value="necklace">Necklaces</option>
+										<option id="earrings" name="earrings" value="earrings">Earrings</option>
+									</select>								
+								
 								</div>
 								<div class="form-group">
 									<label for="">SKU</label>
