renders each category

--- a/views/product/product.handlebars
+++ b/views/product/product.handlebars
@@ -74,13 +74,13 @@
                             {{type.dataValues.description}}
                         </div>
                         
-                        {{!-- <div class="tab-pane fade" id="size" role="tabpanel" aria-labelledby="profile-tab">
+                        <div class="tab-pane fade" id="size" role="tabpanel" aria-labelledby="profile-tab">
                                 <li>Size small measures approximately 35” from shoulder to hemline</li>
                                 <li>Mid-weight, stretch fabric</li>
                                 <li>Below-the-knee hemline</li>
                                 <li>True to fit</li>
                                 <li>Model is approximately 5'9” (175” cm) and is wearing a Size 2</li>    
-                        </div> --}}
+                        </div>
                     </div> 
                 </div>
             </div>
