--- a/views/partials/nav.handlebars
+++ b/views/partials/nav.handlebars
@@ -58,13 +58,16 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" id="ringCategory" aria-haspopup="true" aria-expanded="false" href="/product/category/"> Rings </a>
+                    <a class="nav-link" id="allCategory" aria-haspopup="true" aria-expanded="false" href="/product/category/"> All </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" id="necklaceCategory" aria-haspopup="true" aria-expanded="false" href="/product/category/"> Necklaces </a>
+                    <a class="nav-link" id="ringCategory" aria-haspopup="true" aria-expanded="false" href="/product/ring/"> Rings </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" id="earringsCategory" aria-haspopup="true" aria-expanded="false" href="/product/category/"> Earrings </a>
+                    <a class="nav-link" id="necklaceCategory" aria-haspopup="true" aria-expanded="false" href="/product/necklace/"> Necklaces </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" id="earringsCategory" aria-haspopup="true" aria-expanded="false" href="/product/earring/"> Earrings </a>
                 </li>
             </ul>
         </div>
