--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -39,8 +39,8 @@
 
     <!-- Plugin JavaScript -->
     <script src="/assets/js/products.js"></script>
-    <script src="/assets/js/app.js"></script>
     <script src="/assets/js/category.js"></script>
+    <script src="/assets/js/modal.js"></script>
     
    
     <!-- PINTEREST SCRIPT -->
