Banners, Rings, Necklaces, Earrings banner

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -9,7 +9,7 @@
 
     <!-- SHOP THE TREND -->
     <div class="container" id="trend-ctn">
-        <img id="trend-pic" src="/assets/img/sample-img.png">
+        <img id="trend-pic" src="/assets/img/favoritecollection.png">
         <div class="shop-trend">
             {{!-- <p>SHOP THE TREND</p>
             <button type="button" class="btn btn-secondary" id="trend-btn">Shop</button> --}}
@@ -62,7 +62,7 @@
     <div class="container" id="shop-ctn">
         <div class="row" id="shop-main-ctn">
             <div class="col-md-6 shop-main">
-                <img id="shop-pic1" src="/assets/img/sample-img.png">
+                <img id="shop-pic1" src="/assets/img/ringsbanner.png">
                 {{!-- <div class="shop-main-shop">
                     <p>SHOP RINGS</p>
                     <button type="button" class="btn btn-secondary" id="trend-btn">Shop</button>
@@ -71,7 +71,7 @@
 
             <div class="col-md-6 shop-half">
                 <div class="row shop-half-top">
-                    <img id="shop-pic2" src="/assets/img/sample-img.png">
+                    <img id="shop-pic2" src="/assets/img/necklacesbanner.png">
                     {{!-- <div class="shop-half-shop">
                         <p>SHOP NECKLACES</p>
                         <button type="button" class="btn btn-secondary" id="trend-btn">Shop</button>
@@ -79,7 +79,7 @@
                 </div>  
 
                 <div class="row shop-half-bottom">                   
-                    <img id="shop-pic3" src="/assets/img/sample-img.png">
+                    <img id="shop-pic3" src="/assets/img/earringsbanner.png">
                     {{!-- <div class="shop-half-shop">
                         <p>SHOP TEES</p>
                         <button type="button" class="btn btn-secondary" id="trend-btn">Shop</button>
