--- a/views/partials/nav.handlebars
+++ b/views/partials/nav.handlebars
@@ -47,7 +47,7 @@
     </nav>
     
     <!-- BRAND LOGO -->
-    <a href="/"><img id="logo" src="/assets/img/blkpocketbanner.jpg" height="100%" width="100%"></a>
+    <a href="/"><img id="logo" src="/assets/img/blkpocketbanner.png" height="100%" width="1200px"></a>
 
     <!-- HORIZONTAL NAVIGATION MENU FIXED ON PAGE  ID: MASTHEAD-->
     <nav class="navbar navbar-expand-lg navbar-light bg-light" id="masthead">
