--- a/public/assets/css/category.css
+++ b/public/assets/css/category.css
@@ -17,3 +17,14 @@
     text-align: center;
     color: black;
 }
+
+.product-name {
+    text-align: center;
+    margin-bottom: 2px;
+}
+
+.product-price {
+    text-align: center;
+    margin-bottom: 25px;
+}
+
