--- a/views/admin/admin.handlebars
+++ b/views/admin/admin.handlebars
@@ -53,10 +53,11 @@
 									<input type="number" class="form-control" id="quantity" placeholder="">
 								</div>
 
-                                {{!-- <div class="form-group">
+                                <div class="form-group">
                                     <label for="" class="control-label">Image</label>
-                                    <input class="form-control" type="file" id="image_url" name="uploaded_image" accept=""/>
-                                </div> --}}
+									<input type="number" class="form-control" id="image_url" placeholder="">
+
+                                </div>
 							</form>
 							<br>
 							<div class="text-right">
