--- a/views/product/category.handlebars
+++ b/views/product/category.handlebars
@@ -17,7 +17,7 @@
             <div class="col-md-3">
                 <!-- QUICK VIEW PICTURE CAROUSEL ON HOVER/CLICK ARROW -->
                 <a href="/product/product">
-                    <img class="preview-img" id="previewImg" src="/assets/img/sample-img.png">
+                    <img class="preview-img" id="previewImg" src="{{ this.dataValues.image_url }}">
                     <p class="product-name" id="product_name"> {{ this.dataValues.product_name }} </p>
                 </a>
                     <p class="product-price" id="regular_price"> ${{ this.dataValues.regular_price }}</p>
