each page now has its own banner. modal image also added

--- a/views/partials/modal.handlebars
+++ b/views/partials/modal.handlebars
@@ -21,7 +21,7 @@
                         </div>
 
                         <div class="col-md-5">
-                            <img id="modal-pic" src="public/assets/img/sample-img.png">
+                            <img id="modal-pic" src="/assets/img/modallogo1.png" width="100%">
                         </div>
                     
                         
