--- a/views/product/category.handlebars
+++ b/views/product/category.handlebars
@@ -6,7 +6,7 @@
     
     <!-- CATEGORY LIST -->
     <div class="container" id="category">
-        <img id="category-pic" src="/assets/img/ringbanner.jpg">
+        <img id="category-pic" src="/assets/img/allpage.png">
 
             <br>
 
