--- a/views/product/ring.handlebars
+++ b/views/product/ring.handlebars
@@ -6,7 +6,7 @@
     
     <!-- CATEGORY LIST -->
     <div class="container" id="category">
-        <img id="category-pic" src="/assets/img/ringbanner.jpg">
+        <img id="category-pic" src="/assets/img/ringspage.png">
 
             <br>
 
