--- a/views/product/product.handlebars
+++ b/views/product/product.handlebars
@@ -8,7 +8,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-5">
-                <img class="main-img" id="hero-img" src="{{ type.dataValues.image_url }}">
+                <img class="main-img" id="hero-img" src="http://res.cloudinary.com/blkpocket/image/upload/v1530336352/blkpocket%20products/IMG_0170.jpg">
             </div>
 
             <!-- ADDITIONAL PRODUCT IMG -->
@@ -30,9 +30,9 @@
             <!-- ADD TO FAVORITES -->
             <div class="col-md-5">
                 <div class="product-info">
-                    <h5 class="product-name">Product Name: {{this.dataValues.product_name}} </h5>
-                    <p class="sku">SKU: {{this.dataValues.sku}} </p>
-                    <p class="price">$ {{this.datatValues.regular_price}}</p>
+                    <h5 class="product-name">The Cloud </h5>
+                    <p class="sku">SKU: 10001MS </p>
+                    <p class="price">$475.00</p>
                     <p class="user_quantity">Quantity:</p>
                     <form>
                         <div class="form-group">
