--- a/views/partials/login-modal.handlebars
+++ b/views/partials/login-modal.handlebars
@@ -1,24 +1,21 @@
-<a href="#" data-toggle="modal" data-target="#login-modal"></a>
-
-<div class="modal fade-hide" id="login-modal">
-		<div class="loginmodal-container">
-			<h1 class="">Log In to Your Account</h1><br>
-		  <form class="login">
-		  	<div id="username-form" class="form-group col-lg-12">
-					<label>Username</label>
-					<input id="username-input" type="text" name="user" placeholder="Username">
-					<small id="username-feedback" class=""></small>
-				</div>
-				<div id="password-form" class="form-group col-lg-12">
-					<label>Password</label>
-					<input id="password-input" type="password" name="pass" placeholder="Password">
-					<small id="password-feedback" class=""></small>
-				</div>
-				<input type="submit" name="login" class="login loginmodal-submit" value="Login">
-		  </form>
-		  <div class="login-help">
+ <div class="dropdown-menu dropdown-menu-right cart-dropdown"  id="in-cart" aria-labelledby="navbarDropdownMenuLink-InCart">
+	<div class="loginmodal-container">
+		<h1 class="">Log In to Your Account</h1><br>
+		<form class="login">
+			<div id="username-form" class="form-group col-lg-12">
+				<label>Username</label>
+				<input id="username-input" type="text" name="user" placeholder="Username">
+				<small id="username-feedback" class=""></small>
+			</div>
+			<div id="password-form" class="form-group col-lg-12">
+				<label>Password</label>
+				<input id="password-input" type="password" name="pass" placeholder="Password">
+				<small id="password-feedback" class=""></small>
+			</div>
+			<input type="submit" name="login" class="login loginmodal-submit" value="Login">
+		</form>
+		<div class="login-help">
 				<a href="/users/signup">Register</a> - <a href="#">Forgot Password</a>
-		  </div>
 		</div>
 	</div>
 </div>
